--- a/SISMistico/SISMistico/App.config
+++ b/SISMistico/SISMistico/App.config
@@ -25,9 +25,9 @@
     <add key="eMailPass" value="soluciones2020*" />
     <add key="portEmail" value="587" />
     <add key="RUTAIMAGES" value="D:\JUAN DIEGO\Documentos\RUTAIMAGES\" />
-    <add key="ConexionBaseDeDatos" value="ConexionBD" />
+    <add key="ConexionBaseDeDatos" value="conexionLocalBD" />
     <add key="nameServiceStarter" value="SQLSERVER/EXPRESS" />
-    <add key="Titulo" value="Restaurante Tio Pepe" />
+    <add key="Titulo" value="Restaurante Casa Grande" />
     <add key="AnchoHoja" value="8" />
     <add key="AltoHoja" value="25" />
     <add key="MargenArriba" value="0" />
@@ -40,7 +40,7 @@
   <connectionStrings>
     <add name="ConexionBDMistico" connectionString="Data Source=HP-PC\SQLEXPRESS;Initial Catalog=Mistico;Integrated Security = True" providerName="System.Data.SqlClient" />
     <add name="ConexionBD" connectionString="Data Source=SISRestauranteBD.mssql.somee.com;Initial Catalog=SISRestauranteBD;User ID=JChico97;Password=admin2020*" providerName="System.Data.SqlClient" />
-    <add name="conexionLocalBD" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=RestauranteBD;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient">
+    <add name="conexionLocalBD" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CasaGrandeBD;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient">
     </add>
   </connectionStrings>
   <entityFramework>
