--- a/SISMistico/CapaDatos/CapaDatos.csproj
+++ b/SISMistico/CapaDatos/CapaDatos.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DClientes.cs" />
     <Compile Include="DIngresos.cs" />
     <Compile Include="DEgresos.cs" />
+    <Compile Include="DIngredientes.cs" />
     <Compile Include="DNomina.cs" />
     <Compile Include="DEmpleados.cs" />
     <Compile Include="DErrores.cs" />
