--- a/SISMistico/CapaNegocio/CapaNegocio.csproj
+++ b/SISMistico/CapaNegocio/CapaNegocio.csproj
@@ -47,6 +47,7 @@
     <Compile Include="NClientes.cs" />
     <Compile Include="NEgresos.cs" />
     <Compile Include="NIngresos.cs" />
+    <Compile Include="NIngredientes.cs" />
     <Compile Include="NNomina.cs" />
     <Compile Include="NEmpleados.cs" />
     <Compile Include="NInsumos.cs" />
