--- a/SISMistico/SISMistico/App.config
+++ b/SISMistico/SISMistico/App.config
@@ -24,8 +24,8 @@
     <add key="eMailSMTP" value="smtp.gmail.com" />
     <add key="eMailPass" value="soluciones2020*" />
     <add key="portEmail" value="587" />
-    <add key="RUTAIMAGES" value="D:\JUAN DIEGO\Documentos\RUTAIMAGES\" />
-    <add key="ConexionBaseDeDatos" value="ConexionBDAzure" />
+    <add key="RUTAIMAGES" value="D:\ImagenesRestaurante\" />
+    <add key="ConexionBaseDeDatos" value="conexionLocalBD" />
     <add key="nameServiceStarter" value="SQLSERVER/EXPRESS" />
     <add key="Titulo" value="Restaurante Casa Grande" />
     <add key="AnchoHoja" value="8" />
