--- a/SISMistico/SISMistico/App.config
+++ b/SISMistico/SISMistico/App.config
@@ -25,7 +25,7 @@
     <add key="eMailPass" value="soluciones2020*" />
     <add key="portEmail" value="587" />
     <add key="RUTAIMAGES" value="D:\ImagenesRestaurante\" />
-    <add key="ConexionBaseDeDatos" value="conexionLocalBD" />
+    <add key="ConexionBaseDeDatos" value="ConexionBDAzure" />
     <add key="nameServiceStarter" value="SQLSERVER/EXPRESS" />
     <add key="Titulo" value="Restaurante Casa Grande" />
     <add key="AnchoHoja" value="8" />
