--- a/SISMistico/CapaPresentacion/app.config
+++ b/SISMistico/CapaPresentacion/app.config
@@ -1,18 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CapaPresentacion.ReportesFacturas.Comandas.ConfigComandas" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="CapaPresentacion.ReportesFacturas.FacturaFinal.ConfigFacturas" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="CapaPresentacion.ReportesFacturas.Comandas.ConfigComandas" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
-        <CapaPresentacion.ReportesFacturas.Comandas.ConfigComandas>
+        <CapaPresentacion.ReportesFacturas.FacturaFinal.ConfigFacturas>
             <setting name="Fecha" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="NumFactura" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </CapaPresentacion.ReportesFacturas.FacturaFinal.ConfigFacturas>
+        <CapaPresentacion.ReportesFacturas.Comandas.ConfigComandas>
+            <setting name="Fecha" serializeAs="String">
+                <value/>
             </setting>
             <setting name="NumComanda" serializeAs="String">
                 <value>0</value>
             </setting>
         </CapaPresentacion.ReportesFacturas.Comandas.ConfigComandas>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
