--- a/SISMistico/CapaPresentacion/packages.config
+++ b/SISMistico/CapaPresentacion/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
   <package id="Microsoft.Reporting.WinForms.v11" version="1.0.0.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" requireReinstallation="true" />
 </packages>
