Actualizacion para base inicial

--- a/SISMistico/CapaEntidades/CapaEntidades.csproj
+++ b/SISMistico/CapaEntidades/CapaEntidades.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\ConvertValueHelper.cs" />
     <Compile Include="Helpers\ModelHelperSearch.cs" />
     <Compile Include="Helpers\ValidationType.cs" />
     <Compile Include="Models\Detalle_ingredientes_pedido.cs" />
